# i3viewer

./: .gitignore  .swp  3dviewer.bat  3dviewer.elf.spec  3dviewer.exe.spec  3dviewer.spec  3dviewer.win.spec  Makefile  Makefile.origin  README.md  pyproject.toml  pyrightconfig.json  run.bat  setup.nsi
i3viewer/: i3about.py  i3aboutDialog.py  i3aboutDialog.ui  i3contourdiff.py  i3contourdiffDialog.py  i3contourdiffDialog.ui  i3enums.py  i3heatmap.py  i3heatmapDialog.py  i3heatmapDialog.ui  i3help.py  i3helpDialog.py  i3helpDialog.ui  i3main.py  i3main.py~  i3mainWindow.py  i3mainWindow.ui  i3model.py  i3pick.py  i3pickDialog.py  i3pickDialog.ui  i3point.py  i3pointDialog.py  i3pointDialog.ui  i3polyline.py  i3polylineDialog.py  i3polylineDialog.ui  i3surface.py  i3surfaceDialog.py  i3surfaceDialog.ui  i3vtkWidget.py  icons.qrc  icons_rc.py
